--- a/index.html
+++ b/index.html
@@ -90,15 +90,15 @@
                   <span style="font-size: 70px; color: white;">
                   <i class="fas fa-address-card offset-4"></i>
                   </span>
-                  <h1 class="display-4 text-center text-light">Gratuit</h1>
-                  <p class="lead text-center text-light">Vous en aurez pour votre argent.</p>
+                  <h1 class="display-4 text-center text-light">Rapide</h1>
+                  <p class="lead text-center text-light">Vous en aurez pour votre vitesse.</p>
                 </div>
                 <div class="col-md-3 bg-dark">
                     <span style="font-size: 70px; color: white;">
                     <i class="fas fa-address-card offset-4"></i>
                     </span>
-                    <h1 class="display-4 text-center text-light">Gratuit</h1>
-                    <p class="lead text-center text-light">Vous en aurez pour votre argent.</p>
+                    <h1 class="display-4 text-center text-light">100% sûr</h1>
+                    <p class="lead text-center text-light">Vous en aurez pour votre sûreté.</p>
                   </div>
             </div>
           </div>
