--- a/index.html
+++ b/index.html
@@ -7,9 +7,13 @@
     <title>Google</title>
     <link rel="icon" href="images/favicon.ico" type="image/x-ic    on">
     <!-- Bootstrap CSS -->
+    
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-  </head>
+    <link rel="stylesheet" href="https://bootswatch.com/4/solar/bootstrap.min.css" crossorigin="anonymous">
+    <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous"> -->
+
+  </head> 
+
   <body>
       <!-- BARRE DE NAVIGATION -->
       <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
@@ -21,10 +25,10 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item active">
-              <a class="nav-link" href="https://www.google.com">Google<span class="sr-only">(current)</span></a>
+              <a class="nav-link text-light" href="https://www.google.com">Google</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="http://www.wikipedia.com">Wikipedia</a>
+              <a class="nav-link text-light" href="http://www.wikipedia.com">Wikipedia</a>
             </li>
           </ul>
         </div>
@@ -38,21 +42,21 @@
                   <img class="d-block w-100" src="images/image1.jpg" alt="First slide">
                   <div class="carousel-caption d-none d-md-block">
                     <h1 class="display-3">Télécharge !</h1>
-                    <a href="https://google.com" target=_blank><button class="btn btn-lg btn-danger">Google<button></a>
+                    <a href="https://google.com" target=_blank><button class="btn btn-lg btn-info">Google</button></a>
                   </div>
                 </div>
                 <div class="carousel-item">
                   <img class="d-block w-100" src="images/image2.jpg" alt="Second slide">
                   <div class="carousel-caption d-none d-md-block">
                     <h1 class="display-3">Télécharge !</h1>
-                    <a href="https://google.com" target=_blank><button class="btn btn-danger">Google<button></a>
+                    <a href="https://google.com" target=_blank><button class="btn btn-lg btn-info">Google</button></a>
                   </div>
                 </div>
                 <div class="carousel-item">
                   <img class="d-block w-100" src="images/image3.jpg" alt="Third slide">
                   <div class="carousel-caption d-none d-md-block">
                     <h1 class="display-3">Télécharge !</h1>
-                    <a href="https://google.com" target=_blank><button class="btn btn-danger">Google<button></a>
+                    <a href="https://google.com" target=_blank><button class="btn btn-lg btn-info">Google</button></a>
                   </div>
                 </div>
               </div>
@@ -104,9 +108,9 @@
           </div>
 
           <!-- Footer -->
-          <footer class="footer bg-light" style="margin-top: 20px;">
+          <footer class="footer bg-dark" style="margin-top: 20px;">
               <div class="container mx-auto" style="width: 400px;">
-                <p class="text-center text-dark">Made with ♥ in Mountain View</p>
+                <p class="lead text-center text-light">Made with ♥ in Mountain View</p>
               </div>
             </footer>
           
