--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
   <body>
       <!-- BARRE DE NAVIGATION -->
-      <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+      <nav class="navbar navbar-expand-lg navbar-dark bg-dark py-3">
         <a class="navbar-brand" href="#">Google</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -72,7 +72,7 @@
                
             <!-- PARTIE PARAGRAPHE -->
             <div class="container" style=" max-width:600px">
-              <div class="col align-self-center">
+              <div class="col align-self-center my-6">
                 </br>
                 <p class="lead text-center">Google est vraiment le moteur de recherche le plus incroyable de toute votre vie, croyez-nous.</p>
                 <p class="lead font-italic text-center">"C'est simple, sans Google, aucune théorie de la relativité n'aurait été inventée."</p>
@@ -83,32 +83,32 @@
           <!-- Partie Ligne-->
           <div class="container">
             <div class="row justify-content-around">
-              <div class="col-md-3 bg-dark">
+              <div class="col-md-3 bg-dark py-2 rounded-circle">
                 <span style="font-size: 70px; color: white;">
                 <i class="fas fa-address-card offset-4"></i>
                 </span>
                 <h1 class="display-4 text-center text-light">Gratuit</h1>
                 <p class="lead text-center text-light">Vous en aurez pour votre argent.</p>
               </div>
-              <div class="col-md-3 bg-dark">
+              <div class="col-md-3 bg-dark py-2 rounded-circle">
                   <span style="font-size: 70px; color: white;">
                   <i class="fas fa-address-card offset-4"></i>
                   </span>
                   <h1 class="display-4 text-center text-light">Rapide</h1>
                   <p class="lead text-center text-light">Vous en aurez pour votre vitesse.</p>
-                </div>
-                <div class="col-md-3 bg-dark">
-                    <span style="font-size: 70px; color: white;">
-                    <i class="fas fa-address-card offset-4"></i>
-                    </span>
-                    <h1 class="display-4 text-center text-light">100% sûr</h1>
-                    <p class="lead text-center text-light">Vous en aurez pour votre sûreté.</p>
-                  </div>
+              </div>
+              <div class="col-md-3 bg-dark py-2 rounded-circle">
+                  <span style="font-size: 70px; color: white;">
+                  <i class="fas fa-address-card offset-4"></i>
+                  </span>
+                  <h1 class="display-4 text-center text-light">100% sûr</h1>
+                  <p class="lead text-center text-light">Vous en aurez pour votre sûreté.</p>
+              </div>
             </div>
           </div>
 
           <!-- Footer -->
-          <footer class="footer bg-dark" style="margin-top: 20px;">
+          <footer class="footer bg-dark mt-5 py-2">
               <div class="container mx-auto" style="width: 400px;">
                 <p class="lead text-center text-light">Made with ♥ in Mountain View</p>
               </div>
